examples/test/testpolicy19786.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19786
  namespace: namespace259
spec:
  podSelector:
    matchLabels:
      key34: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value21
          key39: value21
      podSelector:
        matchLabels:
          key38: value41
          key39: value6
          key49: value8
